<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>path_following_controller</name>
  <version>0.0.0</version>
  <description>Controller for executing joint-space trajectories on a group of joints, ensuring each point of a given trajectory is reached</description>
  <maintainer email="nibanovic@gmail.com">Nibanovic</maintainer>
  <license>Posidonia Technology d.o.o.</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>generate_parameter_library</build_depend>

  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>

  <depend>std_srvs</depend>

  <depend>angles</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>realtime_tools</depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>ros2_control_test_assets</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
